@startuml Loja do Barrio

entity cliente{
    pk_cliente INTEGER <<PK>> NOT NULL
    --
    nome VARCHAR(100) NOT NULL
    cpf CHAR(14) NOT NULL
    telefone VARCHAR(20) NOT NULL
    endereco TEXT NOT NULL
}

entity produto{
    pk_produto INTEGER <<PK>> NOT NULL
    pk_fornecedor <<FK>> NOT NULL
    --
    nome VARCHAR(100) NOT NULL
    prateleira VARCHAR(30) NOT NULL
    quantidade INTEGER CHECK(quantidade >= 0) NOT NULL
    preco NUMERIC CHECK(preco >= 0) NOT NULL
}

entity fornecedor{
    pk_fornecedor INTEGER <<PK>> NOT NULL
    --
    nome VARCHAR(100) NOT NULL
    cnpj VARCHAR(30) NOT NULL
    telefone VARCHAR(20) NOT NULL
    endereco TEXT NOT NULL
}

entity venda{
    pk_venda INTEGER <<PK>> NOT NULL
    pk_cliente <<FK>> NOT NULL
    pk_produto <<FK>> NOT NULL
    --
    quantidade INTEGER CHECK(quantidade >= 0) NOT NULL
    valor_total NUMERIC CHECK(valor_total >= 0) NOT NULL
}

cliente ||--o{ venda
produto ||--o{ venda
produto }o--|| fornecedor



@enduml